<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AI美颜相机</string>
    <string name="info_button_desc">应用信息</string>
    <string name="info_title">关于彦祖相机</string>
    <string name="version_format">版本号：%1$s (%2$d)</string>
    <string name="info_desc">这是一个搞笑整活相机：界面展示前置相机预览，点击拍照会保存一张彦祖图片到系统相册。</string>
    <string name="reward_qrcode_desc">赞赏码</string>
    <string name="reward_caption">如果你觉得好玩，欢迎扫码赞赏支持开发</string>
    <string name="reward_notice">赞助说明：赞助完全自愿，仅用于续命服务器和深夜咖啡。</string>
    <string name="info_close">我知道了</string>
    <string name="gallery_button_desc">打开系统相册</string>
</resources>